# pingpongdev

./: CMakeLists.txt  er.edl  ew.edl
er/: CMakeLists.txt  enc.cpp  er.conf  er.hpp  lib.cpp  oblsort_worker.cpp  oht_crypto_impl.cpp  pkt.h  snoopy_par_obl_primitives_impl.cpp
er/include/oht/: crypto.h  lib.h
er/include/oht/obl/: obl.h  oblsort_dispatch.h
er/include/snoopy/: obl_primitives.h
host/: CMakeLists.txt  host.cpp
